--- a/Draw/Controller/Feed/Hot/RankFirstView.xib
+++ b/Draw/Controller/Feed/Hot/RankFirstView.xib
@@ -31,46 +31,46 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIView" id="649252980">
+			<object class="IBUIView" id="739775627">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="126617994">
-						<reference key="NSNextResponder" ref="649252980"/>
+					<object class="IBUIView" id="77508120">
+						<reference key="NSNextResponder" ref="739775627"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, -100}, {320, 337}}</string>
-						<reference key="NSSuperview" ref="649252980"/>
+						<reference key="NSSuperview" ref="739775627"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="937399480"/>
+						<reference key="NSNextKeyView" ref="522488179"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace" id="984664303">
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="704529788">
 								<int key="NSID">2</int>
 							</object>
 						</object>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUILabel" id="937399480">
-						<reference key="NSNextResponder" ref="649252980"/>
+					<object class="IBUILabel" id="522488179">
+						<reference key="NSNextResponder" ref="739775627"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 80}, {104, 21}}</string>
-						<reference key="NSSuperview" ref="649252980"/>
+						<reference key="NSSuperview" ref="739775627"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="378331860"/>
+						<reference key="NSNextKeyView" ref="263779115"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">画画</string>
-						<object class="NSColor" key="IBUITextColor" id="715903440">
+						<object class="NSColor" key="IBUITextColor" id="683057518">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
-						<object class="NSColor" key="IBUIShadowColor" id="939533120">
+						<object class="NSColor" key="IBUIShadowColor" id="166097">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 						</object>
@@ -87,11 +87,11 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="378331860">
-						<reference key="NSNextResponder" ref="649252980"/>
+					<object class="IBUILabel" id="263779115">
+						<reference key="NSNextResponder" ref="739775627"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 108}, {142, 21}}</string>
-						<reference key="NSSuperview" ref="649252980"/>
+						<reference key="NSSuperview" ref="739775627"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -100,9 +100,9 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">作者</string>
-						<reference key="IBUITextColor" ref="715903440"/>
+						<reference key="IBUITextColor" ref="683057518"/>
 						<nil key="IBUIHighlightedColor"/>
-						<reference key="IBUIShadowColor" ref="939533120"/>
+						<reference key="IBUIShadowColor" ref="166097"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
@@ -120,12 +120,13 @@
 				<string key="NSFrameSize">{320, 137}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="126617994"/>
+				<reference key="NSNextKeyView" ref="77508120"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="984664303"/>
+					<reference key="NSCustomColorSpace" ref="704529788"/>
 				</object>
+				<bool key="IBUIClipsSubviews">YES</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
@@ -134,24 +135,24 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">title</string>
-						<reference key="source" ref="649252980"/>
-						<reference key="destination" ref="937399480"/>
+						<reference key="source" ref="739775627"/>
+						<reference key="destination" ref="522488179"/>
 					</object>
 					<int key="connectionID">7</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">author</string>
-						<reference key="source" ref="649252980"/>
-						<reference key="destination" ref="378331860"/>
+						<reference key="source" ref="739775627"/>
+						<reference key="destination" ref="263779115"/>
 					</object>
 					<int key="connectionID">8</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">drawImage</string>
-						<reference key="source" ref="649252980"/>
-						<reference key="destination" ref="126617994"/>
+						<reference key="source" ref="739775627"/>
+						<reference key="destination" ref="77508120"/>
 					</object>
 					<int key="connectionID">9</int>
 				</object>
@@ -177,28 +178,28 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="649252980"/>
+						<reference key="object" ref="739775627"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="126617994"/>
-							<reference ref="937399480"/>
-							<reference ref="378331860"/>
+							<reference ref="77508120"/>
+							<reference ref="522488179"/>
+							<reference ref="263779115"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="126617994"/>
-						<reference key="parent" ref="649252980"/>
+						<reference key="object" ref="77508120"/>
+						<reference key="parent" ref="739775627"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="937399480"/>
-						<reference key="parent" ref="649252980"/>
+						<reference key="object" ref="522488179"/>
+						<reference key="parent" ref="739775627"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="378331860"/>
-						<reference key="parent" ref="649252980"/>
+						<reference key="object" ref="263779115"/>
+						<reference key="parent" ref="739775627"/>
 					</object>
 				</array>
 			</object>
