--- a/Draw/Controller/Feed/Hot/RankSecondView.xib
+++ b/Draw/Controller/Feed/Hot/RankSecondView.xib
@@ -126,6 +126,7 @@
 					<bytes key="NSWhite">MQA</bytes>
 					<reference key="NSCustomColorSpace" ref="617285246"/>
 				</object>
+				<bool key="IBUIClipsSubviews">YES</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
