set paging control

--- a/Draw/Controller/Shop/VendingController.xib
+++ b/Draw/Controller/Shop/VendingController.xib
@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUILabel</string>
@@ -43,7 +43,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="713539296"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -65,7 +64,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrameSize">{307, 360}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="396263088"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -79,7 +77,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 69}, {297, 54}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="58454433"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -93,7 +90,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 179}, {297, 54}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="711677905"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -104,7 +100,6 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{5, 288}, {297, 55}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="207098718"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -115,7 +110,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{37, 89}, {17, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="86274896"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -129,7 +123,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{57, 89}, {42, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="791406378"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -159,7 +152,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{45, 309}, {42, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="792334924"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -186,7 +178,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{129, 89}, {17, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="82807652"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -197,7 +188,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{154, 89}, {42, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="276348225"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -217,7 +207,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{221, 20}, {61, 61}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="338791629"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -229,7 +218,6 @@
 								</array>
 								<string key="NSFrameSize">{307, 360}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="185083813"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="432984982">
 									<int key="NSColorSpace">3</int>
@@ -242,7 +230,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="270631237"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -253,7 +240,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24, 137}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="113605286"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -264,7 +250,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24, 243}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="833121197"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -275,7 +260,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{122, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="412827066"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -286,7 +270,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 200}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="373843065"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -297,7 +280,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{45, 199}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="142699992"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -317,7 +299,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 309}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="19251433"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -328,7 +309,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{230, 89}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="591335896"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -339,7 +319,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{251, 89}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="983130616"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -357,19 +336,18 @@
 						</array>
 						<string key="NSFrame">{{7, 41}, {307, 360}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="562959135"/>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIPagingEnabled">YES</bool>
 					</object>
 					<object class="IBUIButton" id="713539296">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{7, 6}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="691337008"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -406,7 +384,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{80.5, 6}, {159, 33}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="792382614"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -420,7 +397,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{7, 404}, {115, 54}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="622926089"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -434,7 +410,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{130, 416}, {95, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="151623773"/>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -458,7 +433,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{132, 419}, {24, 24}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="427970999"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -472,7 +446,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{232, 416}, {82, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -504,7 +477,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{247.5, 8}, {66.5, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -523,7 +495,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{46, 403}, {36, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="146562100"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -533,7 +504,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{58, 6}, {192, 33}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="322271871"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
@@ -562,7 +532,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="708246902"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -1034,6 +1003,6 @@
 			<string key="tomato@2x.png">{122, 122}</string>
 			<string key="wood_shop_bg@2x.png">{640, 960}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
